fix overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -199,6 +199,7 @@ h1 {
 
 // modals 
 .modal {
+  @include vars.centered;
   display: flex;
   flex-direction: column;
   justify-content: center; 
@@ -206,7 +207,7 @@ h1 {
   top: 50%;
   left: 50%;
   max-width: 950px;
-  min-height: 600px;
+  //min-height: 600px;
   width: 90%;
   transform: translate(-50%, -50%);
   z-index: 9999;
@@ -246,7 +247,7 @@ h1 {
 // content
 .content-wrapper {
   width: 100%;
-  max-height: 550px; 
+  //max-height: 550px; 
   overflow-y: auto; 
   position: relative;
   -webkit-overflow-scrolling: touch;
